# static-html-splitter

./: Cargo.toml  LICENSE  README.md
example/: react.toml  sample.sh  slots.ts
src/: main.rs
