[package]
name = "static-html-splitter"
version = "0.2.0"
authors = ["decentninja <encrpt.wave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.24.0"
regex = "1.2.1"
lazy_static = "1.3.0"
structopt = "0.3.4"
ron = "0.5.1"
serde = "1.0.102"
toml = "0.5.5"
